# feedzai-altair-theme

./: .flake8  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  Pipfile  README.md  demo.ipynb  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  setup.cfg  setup.py  uv.toml
.github/workflows/: release.yml
feedzai_altair_theme/: __init__.py  py.typed  theme.py  tokens.py  types.py
src/feedzai_altair_theme/: __init__.py  theme.py  tokens.py  types.py
tests/: test_theme.py
