[project]
name = "feedzai-altair-theme"
version = "2.0.0"
description = "Feedzai's theme for Altair charts."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Feedzai", email = "oss-licenses@feedzai.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["altair", "theme", "data", "visualization"]
dependencies = ["altair>=5.5.0"]

# Group: https://github.com/vega/altair/blob/v5.5.0/altair/vegalite/v5/theme.py#L102
[project.entry-points.'altair.vegalite.v5.theme']
feedzai = "feedzai_altair_theme.theme:feedzai"

[project.urls]
Changelog = "https://github.com/feedzai/feedzai-altair-theme/blob/master/CHANGELOG.md"
Issues = "https://github.com/feedzai/feedzai-altair-theme/issues"
Source = "https://github.com/feedzai/feedzai-altair-theme"

[dependency-groups]
dev = [
    "jupyterlab==4.1.8",
    "mypy[faster-cache]==1.16.1",
    "ruff==0.11.2",
    "vega-datasets==0.9.0",
]

[build-system]
requires = ["uv_build==0.8.12"]
build-backend = "uv_build"

[tool.mypy]
files = "src/feedzai_altair_theme"
python_version = "3.10"

check_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
error_summary = true
exclude_gitignore = true
extra_checks = true
follow_imports = "normal"
local_partial_types = true
pretty = true
show_column_numbers = true
show_error_context = true
strict_bytes = true
strict_equality = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

incremental = true
# "The warn_unused_configs flag may be useful to debug misspelled section names.":
# - https://github.com/python/mypy/blob/v1.16.1/docs/source/config_file.rst#config-file-format
# - https://github.com/python/mypy/blob/v1.16.1/docs/source/config_file.rst#miscellaneous
# incremental = false
# warn_unused_configs = true

[tool.ruff]
required-version = "0.11.2"
target-version = "py310"
output-format = "full"
preview = false
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = [
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules (w/ formatter)
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
combine-as-imports = true
